# trajectory-reconstruction

./: .eslintignore  .gitignore  .prettierignore  README.md  audit-ci.json  index.html  package.json  snowpack.config.cjs  tsconfig.json
.github/workflows/: node.js.yml
lib/: CMakeLists.txt  build-ci.sh
lib/api/: imgproc.cpp  imgproc.hpp  reconstruction.cpp  reconstruction.hpp  scene.cpp  scene.hpp  video.cpp  video.hpp
lib/kernels/cpu/: cpu_imgproc.cpp  cpu_imgproc.hpp  cpu_reconstruction.cpp  cpu_reconstruction.hpp  cpu_scene.cpp  cpu_scene.hpp  cpu_video.cpp  cpu_video.hpp
lib/motion_tracker/: motion_tracker.cpp  motion_tracker.hpp  motion_tracker_embinder.cpp  vision_graph.cpp  vision_graph.hpp
lib/utils/: emscripten_utils.cpp  emscripten_utils.hpp  frame_pool.cpp  frame_pool.hpp  image_utils.cpp  image_utils.hpp  math_utils.cpp  math_utils.hpp
public/: index.css  index.html
public/motion_tracker/: motion_tracker_worker.js
src/: index.js  index.ts  ipfs.js  motiontracker.js  world.js
src/workers/: motion_tracker_module.js
test/: babel-register.cjs  test-mocha.ts  test-motion-tracker.js  test-motion-tracker.ts  test-opencv.js
test/workers/: motion_tracker_module.js
tools/: Makefile  npm-depends.sh  npm-paths.sh  setup_environment.mk  setup_paths.mk  setup_stages.mk
tools/depends/ade/: package.mk
tools/depends/android-sdk/: package.mk
tools/depends/ceres-solver/: package.mk
tools/depends/eigen/: package.mk
tools/depends/emscripten/: package.mk
tools/depends/google-flags/: package.mk
tools/depends/google-log/: 0001-Disable-syscalls-for-Emscripten.patch  0002-Disable-symbolize-for-Emscripten.patch  0003-Remove-email-code-for-Emscripten.patch  package.mk
tools/depends/opencv/: 0001-Fix-sfm-disabled-when-Eigen-is-present.patch  0001-GAPI-Implement-RGBA2Gray-and-GBRA2Gray.patch  0001-temp-Hack-opencv.js-to-ES6.patch  0002-Disable-iconv-support-for-wechat_qrcode.patch  opencv_js.config.py  package.mk
tools/depends/threads/: 0001-Fix-browser-error-bundling-with-Snowpack.patch
